Bugfixes and changes - Fix video expando to not bleed outside of sitetable using width: 100%; - Fix flat list buttons only showing on hover in comment page - *Kpics* change "contest" flair to orange

--- a/dev/sass/_specific.scss
+++ b/dev/sass/_specific.scss
@@ -32,3 +32,14 @@
     font-size: 79px;
   }
 }
+
+.linkflair-contest {
+  &::after {
+    background-color: #da3903;
+    transform: scaleX(2);
+  }
+  .linkflairlabel {
+    background-color: #da3903;
+    border-color: darken(#da3903, 10);
+  }
+}
