--- a/dev/sass/modules/_header.scss
+++ b/dev/sass/modules/_header.scss
@@ -20,7 +20,9 @@ $header-height: 450px;
   border: none;
   z-index: initial;
   text-align: center;
-  &::before { // Shadows for left and right edges
+  &::before { 
+    /* autoprefixer: off */
+    // Shadows for left and right edges
     position: absolute;
     top: 0; left: 0;
     content: '';
@@ -201,17 +203,19 @@ body.comments-page #header .tabmenu {
   &::after {
     display: block;
     content: 'For all your kpop picture needs';
-    text-transform: uppercase;
-    font-size: 14px;
-    color: $primary-color;
     clear: both;
+    padding: 5px 0;
     width: 100%;
+    color: $primary-color;
+    font-size: 14px;
+    text-transform: uppercase;
   }
 }
 
 body {
   background-color: $page-bg-color;
   &::after { // Shadows for background image.
+    /* autoprefixer: off */
     content: '';
     display: block;
     position: absolute;
