--- a/dev/sass/modules/_sitetable.scss
+++ b/dev/sass/modules/_sitetable.scss
@@ -49,14 +49,22 @@
   &:hover::after {
     // animation: sideBounce .6s forwards;
   }
-  .listing-page &::after { animation: sideReturn .3s forwards; }
-  .listing-page &:hover::after { animation: sideBounce .6s forwards; }
+  .listing-page &::after {
+    transform-origin: right top;
+    animation: sideReturn .3s forwards; 
+    }
+  .listing-page &:hover::after {
+    width: 12px;
+    animation: sideBounce .6s forwards;
+  }
 }
 
 .organic-listing .link::after { display: none; }
 
 .link.last-clicked {
   overflow: visible;
+  border: 1px dotted gray;
+  border-width: 1px 0;
 }
 
 
@@ -66,16 +74,23 @@
 //   }
 // }
 
+// @keyframes sideBounce {
+//   0% { width: 4px; }
+//   20% { width: 16px; }
+//   50%, 80%, 100% { width: 8px; }
+//   60% { width: 12px; }
+// }
+
 @keyframes sideBounce {
-  0% { width: 4px; }
-  20% { width: 16px; }
-  50%, 80%, 100% { width: 8px; }
-  60% { width: 12px; }
+  0% { transform: scaleX(1); }
+  20% { transform: scaleX(1.5); }
+  50%, 80%, 100% { transform: scaleX(1); }
+  60% { transform: scaleX(1.2); }
 }
 
 @keyframes sideReturn {
-  from { width: 8px; }
-  to { width: 4px; }
+  from { transform: scaleX(2); }
+  to { transform: scaleX(1); }
 }
 
 
@@ -108,6 +123,7 @@ body.res-nightmode .RES-keyNav-activeElement {
     transform: translateZ(0);
   }
   &:hover::after {
+    content: "Only downvote if this is rude or not suited for the subreddit!";
     display: block;
     position: absolute;
     // right: -355px;
@@ -117,7 +133,6 @@ body.res-nightmode .RES-keyNav-activeElement {
     width: 350px;
     text-align: center;
     font-size: 11px;
-    content: "Only downvote if this is rude or not suited for the subreddit!";
     font-weight: bold;
     color: #fff;
     background-color: rgba(#990606,.9);
@@ -125,6 +140,7 @@ body.res-nightmode .RES-keyNav-activeElement {
     border-radius: 3px;
     @extend .bounceIn;
     animation-delay: .2s;
+    z-index: 1;
   }
 }
 
@@ -195,7 +211,8 @@ body.res-nightmode .RES-keyNav-activeElement {
   &:visited { color: lighten($link-color, 10%); }
 }
 //Hide all other flat-list items until hover
-.link .buttons li a, .link .buttons li span {
+.link .buttons li a,
+.link .buttons li span {
   opacity: 0;
   transition: opacity .3s;
 }
@@ -215,6 +232,8 @@ body.res-nightmode .RES-keyNav-activeElement {
 .expando .media-preview-content, .res-media-independent {
   margin-right: 14px;
 }
+
+.res-media-zoomable { width: 100%; }
 
 
 // Flairs
